# PurrPass

./: .air.toml  .gitignore  .golangci.yml  Cargo.toml  README.md  go.mod  go.sum  main.go  renovate.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  lint.yml  test.yml
cmd/main/: main.go
cmd/purrpass/: main.go
controllers/: BaseController.go
crates/config/: Cargo.toml
crates/config/src/: lib.rs
database/: database.go
internal/config/: config.go  config_test.go
internal/router/: router.go
router/: router.go
src/: config.rs  main.rs
utils/: env.go
