[package]
name = "purrpass"
version = "0.1.0"
edition = "2021"
license = "AGPL-3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["macros", "rt", "rt-multi-thread"] }

env_logger = "0.11.3"
log = "0.4.21"
