[package]
name = "purrpass"
version = "0.1.0"
edition = "2021"
license = "AGPL-3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Main deps
axum = "0.7"
tokio = { version = "1.36", features = ["macros", "rt", "rt-multi-thread"] }

# Logging
env_logger = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
